--- a/backend/pratise backend/practice project pin/pin/views/shop.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shop.ejs
@@ -1,134 +1,167 @@
 <% include ./partial/header.ejs %>
-<link rel="stylesheet" href="/stylesheets/shop.css">
-<div class="page1">
-    <div class="card1">
-        <h1>GOOD THINGS <i class="fa-solid fa-chevron-down"></i></h1>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link rel="stylesheet" href="/stylesheets/shop.css">
+
+
+     <div class="curcer"></div>
+    <div class="main">
+      
+        <div class="page1">
+            <div class="card1">
+                <h1>GOOD</h1>
+                <h1>THINGS <i class="fa-solid fa-chevron-down"></i></h1>
+
+            </div>
+            <div class="card2">
+                <p>We create high quality, sustainable, luxurious products - toiletries, apparel, blankets, candles.
+                    Basically, things that feel like home. The best part? With every single purchase, you have the
+                    potential to change the course of someone’s life.</p>
+
+            </div>
+        </div>
+
+        <div class="page2 chaids">
+            <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff380ebfee344ff98d24d4156ded6b9dc22a2a2a-5000x5000.png/Change-The-Course-Cookbook-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+
+        </div>
+        <div class="page3 chaids" >
+            <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/4206e9c3f7ab098369c39a2194b82eeca6bb0664-6166x4111.png/DSC0005_Dexter%20Kim.png?rect=2,0,6162,4111&w=640&h=427&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d9f276f5548fdf47c94a403ffaad6384ee1dd81c-5000x5000.png/Helping-Hands-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+            <div class="card3 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5ff174456e7f3a000b5bcdd6768155d29570c39b-5000x5000.png/Good-Nights-Sleep-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+
+        </div>
+
+        <div class="page4 chaids">
+            <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5708a06a5c62e6ecd938d42647888efd72bc5907-1408x1407.png/Donate-100-meals-to-womens-shelter-two-good-co.png?rect=1,0,1407,1407&w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/9abbc4a8506716e15d8b5c9fd2845222060e8c77-2523x2354.png/Eggplant-Kasundi-Two-Good-Co.png?rect=0,1,2523,2353&w=640&h=597&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+            <div class="card3 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+
+        </div>
+
+
+        <div class="page5">
+            <div class="endpage">
+                <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
+                <i class="ri-arrow-right-line"></i>
+            </div>
+        </div>
+        <div class="page6">
+            <div class="card1 card">
+                <h3>CONNECT WITH US</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>YouTube</li>
+                </ul>
+            </div>
+            <div class="imagcon">
+                <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
+                    <path
+                        d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
+                        fill="currentColor"></path>
+                    <path
+                        d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
+                        fill="currentColor"></path>
+                    <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
+                        fill="currentColor"></path>
+                    <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
+                        fill="currentColor"></path>
+                    <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
+                        fill="currentColor"></path>
+                    <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
+                        fill="currentColor"></path>
+                </svg>
+
+
+            </div>
+            <div class="card2 card">
+                <h3>THE NITTY GRITTIES</h3>
+                <ul>
+                    <li>Good Things FAQs</li>
+                    <li>Good Food FAQs</li>
+                    <li>Good Places</li>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+        </div>
+        <div class="page6-part2">
+            <h3>© TWO GOOD CO.2024 TERMS OF USE PRIVACY POLICY</h3>
+            <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition
+                of community coming together around food, begun thousands of years ago by First Nations peoples. As we
+                stand together on this unceded land, we acknowledge our First Nations people, are the original
+                custodians of this land, and we recognise their deep connection to land, water, sky and community which
+                continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
+                the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
+                Always was, always will be Aboriginal land.</h4>
+            <h5 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h5>
+        </div>
 
     </div>
-    <div class="card2">
-        <p>We create high quality, sustainable, luxurious products - toiletries, apparel, blankets, candles. Basically, things that feel like home. The best part? With every single purchase, you have the potential to change the course of someone’s life.</p>
 
-    </div>
-</div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
+        integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<div class="page2">
-    <div class="card1">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff380ebfee344ff98d24d4156ded6b9dc22a2a2a-5000x5000.png/Change-The-Course-Cookbook-Two-Good-Co.png?w=1024&h=1024&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOKBOOK</h5>
-        <h5>$45</h5>
+    <script src="/javascripts/shop.js"></script>
 
-    </div>
-    <div class="card2">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOK KIT</h5>
-        <h5>$95</h5>
-
-    </div>
-
-</div>
-<div class="page3">
-    <div class="card1">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/4206e9c3f7ab098369c39a2194b82eeca6bb0664-6166x4111.png/DSC0005_Dexter%20Kim.png?rect=2,0,6162,4111&w=640&h=427&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOKBOOK</h5>
-        <h5>$45</h5>
-
-    </div>
-    <div class="card2">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d9f276f5548fdf47c94a403ffaad6384ee1dd81c-5000x5000.png/Helping-Hands-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOK KIT</h5>
-        <h5>$95</h5>
-
-    </div>
-    <div class="card3">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5ff174456e7f3a000b5bcdd6768155d29570c39b-5000x5000.png/Good-Nights-Sleep-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOK KIT</h5>
-        <h5>$95</h5>
-
-    </div>
-
-</div>
-
-<div class="page4">
-    <div class="card1">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5708a06a5c62e6ecd938d42647888efd72bc5907-1408x1407.png/Donate-100-meals-to-womens-shelter-two-good-co.png?rect=1,0,1407,1407&w=640&h=640&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOKBOOK</h5>
-        <h5>$45</h5>
-
-    </div>
-    <div class="card2">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/9abbc4a8506716e15d8b5c9fd2845222060e8c77-2523x2354.png/Eggplant-Kasundi-Two-Good-Co.png?rect=0,1,2523,2353&w=640&h=597&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOK KIT</h5>
-        <h5>$95</h5>
-
-    </div>
-    <div class="card3">
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=640&h=640&auto=format" alt="">
-        <h5>CHANGE THE COURSE COOK KIT</h5>
-        <h5>$95</h5>
-
-    </div>
-
-</div>
-
-
-<div class="page5">
-    <div class="endpage">
-        <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
-        <i class="ri-arrow-right-line"></i>
-    </div>
-</div>
-<div class="page6">
-    <div class="card1 card">
-        <h3>CONNECT WITH US</h3>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-            <li>LinkedIn</li>
-            <li>YouTube</li>
-        </ul>
-    </div>
-    <div class="imagcon">
-        <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
-            xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
-            <path
-                d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
-                fill="currentColor"></path>
-            <path
-                d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
-                fill="currentColor"></path>
-            <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
-                fill="currentColor"></path>
-            <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
-                fill="currentColor"></path>
-            <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
-                fill="currentColor"></path>
-            <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
-                fill="currentColor"></path>
-        </svg>
-
-
-    </div>
-    <div class="card2 card">
-        <h3>THE NITTY GRITTIES</h3>
-        <ul>
-            <li>Good Things FAQs</li>
-            <li>Good Food FAQs</li>
-            <li>Good Places</li>
-            <li>Pathways</li>
-            <li>Careers</li>
-        </ul>
-    </div>
-</div>
-<div class="page6-part2">
-    <h3>© TWO GOOD CO.2024 TERMS OF USE PRIVACY POLICY</h3>
-    <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition
-        of community coming together around food, begun thousands of years ago by First Nations peoples. As we
-        stand together on this unceded land, we acknowledge our First Nations people, are the original
-        custodians of this land, and we recognise their deep connection to land, water, sky and community which
-        continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
-        the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
-        Always was, always will be Aboriginal land.</h4>
-    <h5 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h5>
-</div>
-<% include ./partial/footer.ejs %>
+    <% include ./partial/footer.ejs %>
