--- a/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    
 </head>
 
 <body>
@@ -78,7 +79,7 @@
             <div class="link">
                 <a id="cat" href="/shop">Shop</a>
                 <a target="_blank" id="cat" href="/catering">Catering <span><i class="ri-arrow-right-up-line"></i></span></a>
-                <a id="cat" href="#">Donate</a>
+                <a id="cat" href="/donate">Donate</a>
                 <div class="icon">
                     <a id="menu" href="/menu"><i class="ri-menu-line"></i></a>
                     <a id="card" href="/card"><i class="ri-shopping-cart-2-line"></i></a>
