--- a/backend/pratise backend/practice project pin/pin/views/bespoke.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/bespoke.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="/stylesheets/catering.css">
+<link rel="stylesheet" href="/stylesheets/bespoke.css">
 <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any questions.</h4>
 <header class="navbar">
     <div class="part1">
@@ -46,7 +46,7 @@
 
     </div>
     <div class="part2">
-        <a href="/" >Home</a>
+        <a href="/">Home</a>
         <a href="/bespoke">Bespoke Event</a>
         <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
         <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
@@ -55,42 +55,46 @@
     </div>
 </header>
 
-<!-- <div class="hidden">
-    <div class="page">
-    <h1>START A GROUP ORDER</h1>
-    <h5>Guests can add to your cart with a shareable link. You checkout and pay for all guests.</h5>
-    <form action="">
-        <p>Name: <input type="text" name="Name" id="name"></p>
-        <p>Email: <input type="email" name="email" id="email"></p>
-        <input type="submit" value="Create Order">
-    </form>
-</div> -->
-</div>
+
 <div class="page1">
     <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg" alt="">
 </div>
 <div class="page2">
-    <div class="card card1">
-        <h3>Lorem ipsum dolor sit amet.</h3>
+    <form action="">
+        <div class="part1">
+        <p>First-Name <span>*</span><input  type="text" name="first-name" id="first-name" placeholder="shubham" required></p>
+        <p>last-name<span>*</span><input  type="text" name="last-name" id="last-name" placeholder="Meshram" required></p>
+        <p>company<input  type="text" name="company" id="company"></p>
     </div>
-    <div class="card card2">
-        
-        <h3>Lorem ipsum dolor sit amet.</h3>
+    <div class="pard4">
+        <p>Email <span>*</span><input  type="email" name="email" id="email" placeholder="shubhcode97@gmail.com" required></p>
+        <p>Phone-number<input  type="number" name="Phone-number" id="Phone-number" placeholder="7038956822" ></p>
+        <p>Event-date<input  type="date" name="date" id="date"></p>
     </div>
-    <div class="card card3">
-        
-        <h3>Lorem ipsum dolor sit amet.</h3>
+    <div class="part2">
+        <p>Number of gest<input type="number" name="number" id="number-of-gest"></p>
+        <p>Event address <textarea name="address" id="address" cols="125" rows="3"></textarea></p>
     </div>
-    <div class="card card4">
+    <div class="part3">
+        <p>Suburb <input type="text" name="Suburb" id="Suburb"></p>
+        <p>state <select name="state" id="state">
+            <option value="#">--select state--</option>
+            <option value="MH">MH</option>
+            <option value="CG">CG</option>
+            <option value="AP">AP</option>
+        </select></p>
+        <p>Postcode <input type="number" name="pastcode" id="pastcode"></p>
+    </div>
+    <div class="part5">
+        <p>your marssage <textarea name="massage" id="massage" cols="30" rows="10"></textarea></p>
+        <p><input type="checkbox" name="checkbox" id="checkbox"> Email me offers and promotions from Two Good Co.</p>
+       
+    </div>
+    
+    <input type="submit" value="Send Enquery" id="butten">
 
-        <h3>Lorem ipsum dolor sit amet.</h3>
-    </div>
-    <div class="card card5">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-    </div>
-    <div class="card card6">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-    </div>
+        
+    </form>
 </div>
 
 <footer>
@@ -115,4 +119,3 @@
             <span>Powered by FoodStorm</span></h5>
     </div>
 </footer>
-<script src="/javascripts/catring.js"></script>
