--- a/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="/stylesheets/catering.css">
+<link rel="stylesheet" href="/stylesheets/group.css">
 <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any questions.</h4>
 <header class="navbar">
     <div class="part1">
@@ -48,14 +48,14 @@
     <div class="part2">
         <a href="/" >Home</a>
         <a href="/bespoke">Bespoke Event</a>
-        <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
+        <a id="group" href="#"><i class="fa-solid fa-users-line"></i>group Order</a>
         <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
 
     </div>
 </header>
 
-<!-- <div class="hidden">
+<div class="hidden">
     <div class="page">
     <h1>START A GROUP ORDER</h1>
     <h5>Guests can add to your cart with a shareable link. You checkout and pay for all guests.</h5>
@@ -64,7 +64,7 @@
         <p>Email: <input type="email" name="email" id="email"></p>
         <input type="submit" value="Create Order">
     </form>
-</div> -->
+</div>
 </div>
 <div class="page1">
     <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg" alt="">
@@ -115,4 +115,3 @@
             <span>Powered by FoodStorm</span></h5>
     </div>
 </footer>
-<script src="/javascripts/catring.js"></script>
