--- a/backend/pratise backend/practice project pin/pin/views/donate.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/donate.ejs
@@ -38,9 +38,7 @@
             <div class="card">
                 <h4>DONATING IN INDIAN RUPEES</h4>
                 <div class="card1">
-                    <h3>One-Time</h3>
-                    <h3>Weekly</h3>
-                    <h3>Monthly</h3>
+                    <h3><span class="s1">One-Time </span><span class="s2">Weekly </span><span class="s3">Monthly</span></h3>
                 </div>
                 <div class="card2">
                     <a href="#">&#x20B9;264</a>
