--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
@@ -138,11 +138,37 @@
 .bar .card .card1 h3{
   font-size: 1vw;
   text-align: center;
-  border: 1px solid  rgb(66, 65, 65);
-  padding: 10px;
+  border: 1px solid  #424141;
+  padding: 10px 10px;
   border-radius: 30px;
   color: #cdc9c9;
   margin-bottom: 50px;
+}
+
+
+.bar .card .card1 span{
+  margin: 10px;
+}
+
+.bar .card .card1 .s1:hover{
+  background-color:aliceblue;
+  color: #111;
+  padding: 10px 7px;
+  margin-left: -7px;
+  border-radius: 20px 0px 0px 20px;
+}
+
+.bar .card .card1 .s3:hover{
+  background-color:aliceblue;
+  color: #111;
+  padding: 10px 10px;
+  margin-right: -7px;
+  border-radius: 0px 20px 20px 0px;
+}
+.bar .card .card1 .s2:hover{
+  background-color:aliceblue;
+  color: #111;
+  padding: 10px 10px;
 }
 
 .bar .card .card2{
